--- a/main/app/app.template.html
+++ b/main/app/app.template.html
@@ -12,10 +12,10 @@
                 <a href=""><h7 id="example_source_menu">Menu</h7></a>
                 <ul  class="nav navbar-nav nav-pills nav-stacked it-menu-animated">
                     <li >
-                        <a href="#/widget/itloader">SubMenu1</a>
+                        <a href="#/playlist">SubMenu1</a>
                     </li>
                     <li >
-                        <a href="#/widget/itBottomGlue">SubMenu2</a>
+                        <a href="#/configuration">SubMenu2</a>
                     </li>
                 </ul>
             </li>
@@ -25,7 +25,8 @@
 
     <it-side-menu-content>
 
-        <h3 id="example_see-on-plunker">See on Plunker !</h3>
+        <!-- View content -->
+        <div ng-view class="ng-view-class"></div>
 
     </it-side-menu-content>
 </it-side-menus>
