--- a/main/index.html
+++ b/main/index.html
@@ -9,11 +9,14 @@
 
     <!-- modules -->
     <script type="text/javascript" src="app/app.module.js"></script>
-    
+    <script type="text/javascript" src="app/app.route.js"></script>
+
+
     <!-- services -->
 
     <!-- controller -->
-
+    <script type="text/javascript" src="app/features/configuration/configurationController.js"></script>
+    <script type="text/javascript" src="app/features/playlist/playlistController.js"></script>
     <!-- directives -->
 
 
